--- a/src/Defize.Gus.GusConsole/packages.config
+++ b/src/Defize.Gus.GusConsole/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CLAP" version="2.2" />
+  <package id="CLAP" version="4.6" targetFramework="net461" />
 </packages>
